# jasonl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: claude-code-review.yml
benches/: search_bench.rs
src/: app.rs  db.rs  filter_expr.rs  input.rs  main.rs  search_index.rs  streaming_loader.rs  ui.rs
src/data/: conversation.rs  loader.rs  mod.rs
