[package]
name = "jasonl"
version = "0.1.0"
edition = "2021"
description = "A TUI viewer for JSONL LLM conversation files"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
arboard = "3.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
dirs = "5.0"
